--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "lint-staged": "^11.1.2",
     "monaco-editor": "^0.33.0",
     "prettier": "^2.4.1",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5"
   },
