--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^27.0.5",
     "lint-staged": "^11.1.2",
     "monaco-editor": "^0.33.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "prettier": "^2.4.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
